// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewBadge Snapshots No props 1`] = `
<div
  className="sc-bdfBwQ kQoaxm"
/>
`;

exports[`NewBadge Snapshots number 1`] = `
<div
  className="sc-bdfBwQ kQoaxm"
>
  <span
    className="sc-gsTCUz iGsWbM"
  >
    <span>
      1000
    </span>
  </span>
</div>
`;

exports[`NewBadge Snapshots number 2`] = `
<div
  className="sc-bdfBwQ kQoaxm"
>
  <span
    className="sc-gsTCUz jtxTxC"
  >
    <span>
      10
    </span>
  </span>
</div>
`;

exports[`NewBadge Snapshots with children 1`] = `
<div
  className="sc-bdfBwQ kQoaxm"
>
  test
  <span
    className="sc-gsTCUz iGsWbM"
  >
    <span>
      1000
    </span>
  </span>
</div>
`;
